examples/php/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: php-example
  name: php-example
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: php-example
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php-example
        deploymentconfig: php-example
    spec:
      containers:
      - image: docker-registry.default.svc:5000/slac/php-example
        imagePullPolicy: Always
        name: php-example
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - php-example
      from:
        kind: ImageStreamTag
        name: php-example:latest
        namespace: slac
    type: ImageChange
  - type: ConfigChange
