examples/php/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-example
  name: php-example
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: php-example
  sessionAffinity: None
  type: ClusterIP
